--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.25.0
-opencv-python-headless==4.5.4.60
-easyocr==1.6.2
-Pillow==9.2.0
-numpy==1.23.5
+streamlit==1.38.0
+opencv-python==4.10.0
+easyocr==1.7.2
+Pillow==10.4.0
+numpy==1.26.4
