--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.38.0
-opencv-python-headless==4.9.0.80
-easyocr==1.7.2
-Pillow==10.4.0
-numpy==1.26.4
+streamlit
+opencv-python-headless
+easyocr
+Pillow
+numpy
